Compiles with oneAPI and acpp

--- a/Code_Exercises/Asynchronous_Execution/CMakeLists.txt
+++ b/Code_Exercises/Asynchronous_Execution/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_09_synchronization
-add_sycl_executable(Asynchronous_Execution source)
+# add_sycl_executable(Asynchronous_Execution source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Asynchronous_Execution solution)
 endif()
