--- a/Code_Exercises/Coalesced_Global_Memory/CMakeLists.txt
+++ b/Code_Exercises/Coalesced_Global_Memory/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_16_coalesced_global_memory
-add_sycl_executable(Coalesced_Global_Memory source)
+# add_sycl_executable(Coalesced_Global_Memory source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Coalesced_Global_Memory solution)
 endif()
