--- a/Code_Exercises/Device_Discovery/CMakeLists.txt
+++ b/Code_Exercises/Device_Discovery/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_05_device_selection
-add_sycl_executable(Device_Discovery source)
+# add_sycl_executable(Device_Discovery source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Device_Discovery solution)
 endif()
