--- a/Code_Exercises/Handling_Errors/CMakeLists.txt
+++ b/Code_Exercises/Handling_Errors/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_04_handling_errors
-add_sycl_executable(Handling_Errors source)
+# add_sycl_executable(Handling_Errors source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Handling_Errors solution)
 endif()
