--- a/Code_Exercises/Image_Convolution/CMakeLists.txt
+++ b/Code_Exercises/Image_Convolution/CMakeLists.txt
@@ -9,4 +9,4 @@
 ]]
 
 # Exercise exercise_15_image_convolution
-add_sycl_executable(Image_Convolution reference)
+# add_sycl_executable(Image_Convolution reference)
