--- a/Code_Exercises/Multiple_Devices/CMakeLists.txt
+++ b/Code_Exercises/Multiple_Devices/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_13_load_balancing
-add_sycl_executable(Multiple_Devices source)
+# add_sycl_executable(Multiple_Devices source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Multiple_Devices solution)
 endif()
