--- a/Code_Exercises/Data_and_Dependencies/CMakeLists.txt
+++ b/Code_Exercises/Data_and_Dependencies/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_10_managing_dependencies
-add_sycl_executable(Data_and_Dependencies source)
+# add_sycl_executable(Data_and_Dependencies source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Data_and_Dependencies solution)
 endif()
