--- a/Code_Exercises/Enqueueing_a_Kernel/CMakeLists.txt
+++ b/Code_Exercises/Enqueueing_a_Kernel/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_02_hello_world
-add_sycl_executable(Enqueueing_a_Kernel source)
+# add_sycl_executable(Enqueueing_a_Kernel source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Enqueueing_a_Kernel solution)
 endif()
