--- a/Code_Exercises/Managing_Data/CMakeLists.txt
+++ b/Code_Exercises/Managing_Data/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_03_scalar_add
-add_sycl_executable(Managing_Data source)
+# add_sycl_executable(Managing_Data source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(Managing_Data solution)
 endif()
