--- a/Code_Exercises/More_SYCL_Features/CMakeLists.txt
+++ b/Code_Exercises/More_SYCL_Features/CMakeLists.txt
@@ -9,9 +9,9 @@
 ]]
 
 # Exercise exercise_06_vector_add
-add_sycl_executable(More_SYCL_Features reduce_naive)
-add_sycl_executable(More_SYCL_Features reduce_atomic)
-add_sycl_executable(More_SYCL_Features reduce_group_algorithms)
+# add_sycl_executable(More_SYCL_Features reduce_naive)
+# add_sycl_executable(More_SYCL_Features reduce_atomic)
+# add_sycl_executable(More_SYCL_Features reduce_group_algorithms)
 # SYCL reductions don't have full support in AdaptiveCpp
 if (NOT SYCL_ACADEMY_USE_ADAPTIVECPP)
   add_sycl_executable(More_SYCL_Features reduce_sycl_reduction)
