--- a/Code_Exercises/OneMKL_gemm/CMakeLists.txt
+++ b/Code_Exercises/OneMKL_gemm/CMakeLists.txt
@@ -9,11 +9,11 @@
 ]]
 
 # Exercise exercise_11_onemkl_dgemm
-add_sycl_executable(OneMKL_gemm source_onemkl_usm_gemm)
-add_sycl_executable(OneMKL_gemm source_onemkl_buffer_gemm)
+# add_sycl_executable(OneMKL_gemm source_onemkl_usm_gemm)
+# add_sycl_executable(OneMKL_gemm source_onemkl_buffer_gemm)
 
-target_link_libraries(OneMKL_gemm_source_onemkl_usm_gemm PUBLIC -L$ENV{MKLROOT} -lonemkl)
-target_link_libraries(OneMKL_gemm_source_onemkl_buffer_gemm PUBLIC -L$ENV{MKLROOT} -lonemkl)
+# target_link_libraries(OneMKL_gemm_source_onemkl_usm_gemm PUBLIC -L$ENV{MKLROOT} -lonemkl)
+# target_link_libraries(OneMKL_gemm_source_onemkl_buffer_gemm PUBLIC -L$ENV{MKLROOT} -lonemkl)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(OneMKL_gemm solution_onemkl_usm_gemm)
   add_sycl_executable(OneMKL_gemm solution_onemkl_buffer_gemm)
