--- a/Code_Exercises/Using_USM/CMakeLists.txt
+++ b/Code_Exercises/Using_USM/CMakeLists.txt
@@ -9,7 +9,7 @@
 ]]
 
 # Exercise exercise_08_usm_vector_add
-add_sycl_executable(USM_Data_Parallelism source)
+# add_sycl_executable(USM_Data_Parallelism source)
 if(SYCL_ACADEMY_ENABLE_SOLUTIONS)
   add_sycl_executable(USM_Data_Parallelism solution)
 endif()
